tests/snapshots/api_surface__rust_pub_removed.snap
---
source: tests/api_surface.rs
expression: d
---
- code: api-surface-change
  severity: note
  message: "public fn `b` removed"
  primary:
    file: lib.rs
    byte_range:
      start: 0
      end: 14
    line_start: 1
    col_start: 1
    line_end: 1
    col_end: 14
  helps:
    - downstream callers may break — check for external usages
